--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,6 @@ body {
     display: inline-block;
     margin: 0;
     padding-right: 2em;
-    display: inline-block;
-    /*margin: 0 5px 0 0;*/
 }
 
 .life {
@@ -63,20 +61,29 @@ body {
 
 .stopModal {
     display: none; /* Hidden by default */
+    background-image: url('../images/paper.png'); /* photo source www.freepngs.com */
+    background-size: 65%;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
-.startModalContent, .stopModalContent {
-    display: block;
+.startModalContent {
+    background-color: #ccffff;
+    display: inline-flexblock;
     margin: 5%;
     padding: 1em;
     border: 1px solid #888;
     border-radius: 8px;
     width: 80%;
-    height: 80%
+    height: 80%;
 }
 
-.startModalContent {
-    background-color: #ccffff;
+.stopModalContent {
+    display: block;
+    margin-left: 42%;
+    margin-top: 20%;
+    width: 40%;
+    height: 40%;
 }
 
 .modalImg {
@@ -87,21 +94,17 @@ body {
     padding-bottom: 2em;
 }
 
-button {
+.play, .close {
     font: inherit;
     border-radius: 8px;
-    width: 15%;
     margin-top: auto;
     margin-bottom: auto;
 }
 
-.stopModalContent {
-    background-image: url('paper.png'); /* photo source www.freepngs.com */
-    background-size: cover;
+.play {
+    width: 15%;
 }
 
-.stopModalContent.h2,
-.stopModalContent.p,
-.stopModalContent.close {
-    padding-left: 3em;
-}
+/*.close {
+    width: 20%;
+}*/
