--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ body {
 
 .startModalContent {
     background-color: #ccffff;
-    display: inline-flex;
+    display: block;
     margin: 5%;
     padding: 1em;
     border: 1px solid #888;
