--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@ body {
     width: 100%;
     height: 100%;
     margin: auto;
+    background: url("../images/background.jpg");
+    /* image source: www.pixabay.com */
+    background-size: cover;
 
 }
 
