--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,7 @@ body {
     width: 100%;
     height: 100%;
     margin: auto;
-    background: url("../images/background.jpg");
-    /* image source: www.pixabay.com */
-    background-size: cover;
+    background-color: #e5ecdd;
 
 }
 
